<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.jagod.goodbyehomework.activities.SignUpActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/registration"/>

    <EditText
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/example_first_name"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/first_name"
        android:layout_alignRight="@+id/first_name"
        android:layout_below="@+id/first_name"
        android:ems="10"
        android:hint="@string/example_last_name"
        android:inputType="textPersonName"
        />

    <EditText
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/last_name"
        android:layout_alignStart="@+id/last_name"
        android:layout_below="@+id/last_name"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="pupkin@mail.ru"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mail"
        android:layout_alignStart="@+id/mail"
        android:layout_below="@+id/mail"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="**************"
        android:inputType="textPassword"
        />

    <EditText
        android:id="@+id/password_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_first"
        android:layout_alignStart="@+id/password_first"
        android:layout_below="@+id/password_first"
        android:ems="10"
        android:hint="**************"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:text="@string/sign_up"
        android:layout_below="@+id/password_warnings"
        android:layout_alignLeft="@+id/password_second"
        android:layout_alignStart="@+id/password_second"
        android:layout_alignRight="@+id/password_second"
        android:layout_alignEnd="@+id/password_second"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/first_name"
        android:layout_marginTop="11dp"
        android:layout_toLeftOf="@+id/first_name"
        android:layout_toStartOf="@+id/first_name"
        android:text="@string/first_name"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name"
        android:layout_marginTop="11dp"
        android:layout_toLeftOf="@+id/last_name"
        android:layout_toStartOf="@+id/last_name"
        android:text="@string/last_name"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/mail"
        android:layout_alignBottom="@+id/mail"
        android:layout_toLeftOf="@+id/mail"
        android:layout_toStartOf="@+id/mail"
        android:text="@string/email"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/password_first"
        android:layout_alignBottom="@+id/password_first"
        android:layout_toLeftOf="@+id/password_first"
        android:layout_toStartOf="@+id/password_first"
        android:text="@string/password"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/password_again"
        android:layout_alignBaseline="@+id/password_second"
        android:layout_alignBottom="@+id/password_second"
        android:layout_toLeftOf="@+id/password_second"
        android:layout_toStartOf="@+id/password_second"/>

    <TextView
        android:id="@+id/name_warnings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_name"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/mail_warnings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mail"
        android:layout_centerHorizontal="true"
        android:text="@string/mail_mismatch_warning"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/password_warnings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_second"
        android:layout_centerHorizontal="true"
        android:text="@string/password_mismatch_warning"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"/>

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:visibility="invisible"/>

</RelativeLayout>